**************************************************************************************************
Feature changes:

2025.12.19.
Increased base step speed 600 => 400 ms
Incorrect outputs now replace the expected one.
Reduced the number of randomized input sheets required to win 3=>2, and they are now progressively faster (8x=>16x,24x)


**************************************************************************************************
Puzzle changes:

2025.12.19
POW [0] is now consumed (instead of returning [1] like before). 0^0 shall remain undefined.
TAKE now also has double functionality:
-TAKE [non-constant] still removes ("takes") the leading term and returns what remains.
-TAKE [constant] now takes reciprocal.
-TAKE [0] is of course consumed.
IN can now push inputs even if OUT is not present (can be disabled in options menu).

Early victories (for filtering problems) are no longer possible - all inputs must be processed. For infinite problems this is not necessary.



**************************************************************************************************
Quality of life changes:

2025.12.20.
Drag and drop features added.
Save and load features added. Export and import features added.
Options menu added. Can increase button sizes for small screens.
Keyboard shorcuts added. 1-5 for speed, R to restart, WASD to move all modules, Esc to go back in menus.